--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "3.3.2",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@vite-pwa/nuxt": "1.0.4",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
