--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@internationalized/date": "^3.9.0",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "3.3.2",
     "@nuxtjs/google-fonts": "3.2.0",
+    "@pinia/nuxt": "0.11.2",
     "@vite-pwa/nuxt": "1.0.4",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
